# azure_function_bazel

./: README.md  hexa.json
functions/azurefunctionbazel-5816/: .funcignore  .gitignore  WORKSPACE  bazel-bin  package-lock.json  package.json  tsconfig.json
functions/azurefunctionbazel-5816/httpTrigger/: BUILD.bazel  function.json  index.ts
functions/workspacetest-58607/: .funcignore  .gitignore  WORKSPACE  package-lock.json  package.json  tsconfig.json
functions/workspacetest-58607/httpTrigger/: BUILD.bazel  function.json  index.ts  lib.ts
